--- a/src/components/featured/featured.css
+++ b/src/components/featured/featured.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .featuredItem {
@@ -13,10 +13,12 @@
   border-radius: 10px;
   overflow: hidden;
   height: 250px;
+  flex: 1;
 }
 
 .featuredImg {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
