--- a/src/components/propertyList/propertyList.css
+++ b/src/components/propertyList/propertyList.css
@@ -19,8 +19,15 @@
   object-fit: cover;
 }
 
+.pListTitles {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
 .pListTitles > h1 {
   font-size: 18px;
+  color: #444;
 }
 
 .pListTitles > h2 {
